# fastText

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  fastText  fastText.cbp
src/: fasttext.cc  main.cc  model.cc
